Add rust verifier, completed UI.

--- a/semaphore/apps/contracts/package.json
+++ b/semaphore/apps/contracts/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
         "@nomicfoundation/hardhat-ethers": "^3.0.0",
+        "@nomicfoundation/hardhat-foundry": "^1.1.2",
         "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
         "@nomicfoundation/hardhat-toolbox": "^4.0.0",
         "@nomicfoundation/hardhat-verify": "^2.0.0",
@@ -50,7 +51,8 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
-        "@semaphore-protocol/contracts": "4.0.3"
+        "@semaphore-protocol/contracts": "4.0.3",
+        "elliptic-solidity": "^1.0.0"
     },
     "packageManager": "yarn@4.1.0"
 }
